--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "prefer-stable": true,
+    "require": {
+        "phpunit/phpunit": "^5.2"
+    }
 }
